# fsvwin

./: .gitignore  README.md  appres.RES  appres.rc  config.h  fsvwin.sln  fsvwin.vcproj  fsvwin_vc2005.sln  winutils.c
gtkgl/: AUTHORS  NEWS  README  TODO  config.h  gtkgl.sln  gtkgl.vcproj  gtkgl_vc2005.vcproj
gtkgl/gtkgl/: gdkgl.c  gtkglarea.c
lib/: dirent.h  getopt.c  getopt1.c  gtkdateedit.c  gtkdateedit.h  scandir.c  unistd.h  vccompat.h
lib/sys/: time.h
src/: Makefile.am  TODO  about.c  about.h  animation.c  callbacks.c  callbacks.h  camera.c  colexp.c  color.c  common.c  common.h  dialog.c  dirtree.c  filelist.c  fnmatch.c  fnmatch.h  fsv.c  geometry.c  geometry.h  gui.c  ogl.c  scanfs.c  tmaptext.c  viewport.c  window.c  window.h  winutils.h
